Second commit after Updates and Changes in code.

--- a/admin_login.html
+++ b/admin_login.html
@@ -20,13 +20,13 @@
                         <h3 class="text-center">Admin Login</h3>
                     </div>
                     <div class="card-body">
-                        <form id="loginForm" action="admin_login.php" method="POST">
+                            <form action="auth.php" method="post">
                             <div class="form-group">
-                                <label for="username">Username</label>
+                                <label style="width:5.2rem" for="username">Username</label>
                                 <input type="text" class="form-control" id="username" name="username" required>
-                            </div>
+                            </div><br>
                             <div class="form-group">
-                                <label for="password">Password</label>
+                                <label style="width:5.2rem" for="password">Password</label>
                                 <input type="password" class="form-control" id="password" name="password" required>
                             </div>
                             <div class="text-center">
